@@ -206,6 +206,11 @@ Documentation
     contrib jars configured for dynamic downloaded. (Note: when running
     behind firewall, a firewall prompt might pop up) (Doron Cohen)
 
+Build
+
+ 1. LUCENE-802: Added LICENSE.TXT and NOTICE.TXT to Lucene jars.
+    (Steven Parkes via Michael Busch)
+
 ======================= Release 2.1.0 2007-02-14 =======================
 
 Changes in runtime behavior
